# MiracleController

./: README.md  can_init.sh
src/can/: CMakeLists.txt  package.xml
src/can/include/can/: can.h  can_node.h
src/can/src/: can.cpp  can0.cpp  can1.cpp
src/can_interface/: CMakeLists.txt  package.xml
src/can_interface/msg/: MotorInfo.msg  MotorSendInfo.msg
src/chassis/: CMakeLists.txt  package.xml
src/chassis/include/chassis/: chassis.h  chassis_node.h
src/chassis/src/: chassis.cpp  chassis_node.cpp
src/dbus_dr16/: CMakeLists.txt  package.xml
src/dbus_dr16/include/dbus_dr16/: dbus_dr16.h  dbus_dr16_node.h
src/dbus_dr16/src/: dbus_dr16.cpp  dbus_dr16_node.cpp
src/dbus_dr16_interface/: CMakeLists.txt  package.xml
src/dbus_dr16_interface/msg/: DR16.msg
src/gimbal/: CMakeLists.txt  package.xml
src/gimbal/src/: GM6020.cpp
